                             dict(help="Extra config file"),
                             default="extra.xml", type=icat.config.cfgpath)
         conf = config.getconfig()

   This will search the extra config file in all the default config
   directories, regardless where the main configuration file was found.

** Bug fixes and minor changes

 + Improved client.searchChunked().  This version is not susceptible
   to Issue icatproject/icat.server#128 anymore.

 + Move the management of dependencies of tests into a separate
   package pytest-dependency that is distributed independently.

* Version 0.12.0 (2016-10-10)

** New features

 + Verify support for ICAT 4.8.0 and IDS 1.7.0.

 + Add IDSClient methods reset() and resetPrepared().

 + Issue #28: Add support for searching for attributes in class Query.

** Bug fixes and minor changes

 + Sort objects in icatdump.py before writing them to the dump file.
   This keeps the order independent from the collation used in the
   ICAT database backend.

 + Issue #2: for Python 3.6 (expected to be released in Dec 2016) and
   newer, use the support for chunked transfer encoding in the standard
   lib.  Keep our own implementation in module icat.chunkedhttp only
   for compatibility with older Python versions.

 + Improved the example script wipeicat.py.

 + Add an example script dumprules.py.

 + Add missing schema definition for the ICAT XML data file format for
   ICAT 4.7.

 + Fix an AttributeError during error handling.

* Version 0.11.0 (2016-06-01)

** New features

 + Issues #12 and #23: add support for ICAT 4.7.0 and IDS 1.6.0.  ICAT
   4.7.0 had some small schema changes that have been taken into
   account.

** Incompatible changes

 + Remove the autoget argument from Entity.getUniqueKey().
   Deprecated since 0.9.0.

** Bug fixes and minor changes

 + Issue #21: configuration variable promptPass is ignored when set in
   the configuration file.

 + Issue #18: Documentation: missing stuff in the module index.
